--- a/application/views/scripts/archive/index.phtml
+++ b/application/views/scripts/archive/index.phtml
@@ -15,10 +15,10 @@
     <div id="main_content_archive_cont">
     <p class="archive_title">
     	<?php echo date('d.m.Y', strtotime($this->escape($entry->getDateFrom())) )?>
-    	<?php echo $this->escape($entry->getTitle()) ?>	
+    	<?php echo $this->escape($entry->getTitleLng()) ?>	
     </p>
     
-    <p class="archive_pre_content"><?php echo nl2br($this->escape($entry->getPreContentPl())) ?></p>
+    <p class="archive_pre_content"><?php echo nl2br($this->escape($entry->getPreContent())) ?></p>
     </div>
     
     <div id="main_content_news_go">
