--- a/application/modules/admin/views/scripts/index/index.phtml
+++ b/application/modules/admin/views/scripts/index/index.phtml
@@ -1,4 +1,6 @@
-Strona administracyjna <br />
+<div id="admin_event">
+
+<p class="admin_tytul">Edycja podstrony NEWS</p>
 
 <table id="event">
 	<tr id="naglowek">
@@ -11,11 +13,11 @@ Strona administracyjna <br />
 	</tr>
 	
 	<?php foreach ($this->entries as $entry): ?>
-    <tr>
+    <tr onMouseOver="this.style.background='#FFFFCC'" onMouseOut="this.style.background='none'">
     <td><?php echo $this->escape($entry->getId())?></td>
     <td id="tytul"><?php echo $this->escape($entry->getTitle())?></td>
     <td><?php echo date('d.m.Y', strtotime($this->escape($entry->getDateFrom())) )?></td>
-	<td id="pre_content"><?php echo substr(nl2br($this->escape($entry->getPreContentPl())),0, 65) ?> ...</td>
+	<td id="pre_content"><?php echo substr(nl2br($this->escape($entry->getPreContentPl())),0, 80) ?> ...</td>
 	<td><a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'details', 'id'=>$entry->getId(), 'lang'=>'pl'), null, true);?>"><img src="/images/edit.jpg" /></a></td>
 	<td><a href="#"><img src="/images/drop.jpg" /></a></td>
     
@@ -23,3 +25,5 @@ Strona administracyjna <br />
     <?php endforeach ?>
 
 </table>
+
+</div>
