--- a/application/modules/admin/views/scripts/index/index.phtml
+++ b/application/modules/admin/views/scripts/index/index.phtml
@@ -18,7 +18,7 @@
     <td id="tytul"><?php echo $this->escape($entry->getTitle())?></td>
     <td><?php echo date('d.m.Y', strtotime($this->escape($entry->getDateFrom())) )?></td>
 	<td id="pre_content"><?php echo substr(nl2br($this->escape($entry->getPreContentPl())),0, 80) ?> ...</td>
-	<td><a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'details', 'id'=>$entry->getId(), 'lang'=>'pl'), null, true);?>"><img src="/images/edit.jpg" /></a></td>
+	<td><a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'index', 'action'=>'details', 'id'=>$entry->getId(), 'lang'=>'pl'), null, true);?>"><img src="/images/edit.jpg" /></a></td>
 	<td><a href="#"><img src="/images/drop.jpg" /></a></td>
     
     </tr>
