jakies zmiany nie pamietam jakie ;)

--- a/application/layouts/scripts/layout_admin.phtml
+++ b/application/layouts/scripts/layout_admin.phtml
@@ -35,28 +35,28 @@
 			<div id="menu_left_admin">
 				<ul>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'offer', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona HOME</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'offer', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona HOME</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'news', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona NEWS</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'news', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona NEWS</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona ZAPOWIEDZI</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona ZAPOWIEDZI</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona KARTA</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona KARTA</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona KONTAKT</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona KONTAKT</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona OFERTA</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona OFERTA</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona PARTNERZY</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona PARTNERZY</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona NEWSLETTER</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona NEWSLETTER</a>
 					</li>
 				</ul>
 			</div>
