--- a/application/layouts/scripts/layout_en.phtml
+++ b/application/layouts/scripts/layout_en.phtml
@@ -6,6 +6,7 @@
 	<?php echo $this->headLink()->appendStylesheet('/css/global.css') ?> 
 	<?php echo $this->headScript()
 		->prependFile('/js/main.js')
+		->prependFile('/js/jquery-ui-1.8.18.min.js')
 		->prependFile('/js/jquery-1.7.2.min.js') ?>
 	
 	<script type="text/javascript">
