--- a/application/modules/admin/views/scripts/gallery/index.phtml
+++ b/application/modules/admin/views/scripts/gallery/index.phtml
@@ -1,5 +1,22 @@
+<div id="priority_messages">
+	<ul>
+	<?php foreach ($this->priorityMessenger() as $label => $messages) : ?>
+		<?php if (count($messages)) : ?> 
+			<li class="<?php echo $label ?>_message">
+				<ul class="<?php echo $label ?>_message">
+				<?php foreach ($messages as $message) : ?>
+					<li><?php echo $message ?></li>
+				<?php endforeach; ?>
+				</ul>
+			</li>
+		<?php endif; ?>
+	<?php endforeach; ?>
+	</ul>
+</div>
+
 <div id="admin_event">
 	<p class="admin_tytul">Edycja podstrony NEWS</p>
+	<a href="<?php echo $this->url(array('action' => 'add')) ?>">Dodaj nową galerię</a>
 	<table id="event">
 		<tr id="naglowek">
 			<td>Lp.</td>
@@ -18,11 +35,15 @@
 			<td><?php echo date('d.m.Y', strtotime($this->escape($entry->getFolderDate())) )?></td>
 			<td id="pre_content"><?php echo substr(nl2br($this->escape($entry->getFolderContent())),0, 80) ?></td>
 			<td>
-				<a href="<?php echo $this->url(array('action' => 'show', 'id' => $entry->getId()));?>">
+				<a href="<?php echo $this->url(array('action' => 'edit', 'id' => $entry->getId()));?>">
 					<img src="/images/edit.jpg" />
 				</a>
 			</td>
-			<td><a href="#"><img src="/images/drop.jpg" /></a></td>
+			<td>
+				<a href="<?php echo $this->url(array('action' => 'remove', 'id' => $entry->getId()));?>">
+					<img src="/images/drop.jpg" />
+				</a>
+			</td>
 		</tr>
 		<?php endforeach ?>
 	
