Dodanie pola content, daty utworzenia, modyfikacji oraz użytkownika do galerii. Dodanie początku komunikatów.

--- a/application/modules/admin/views/scripts/gallery/add.phtml
+++ b/application/modules/admin/views/scripts/gallery/add.phtml
@@ -1,5 +1,5 @@
 <div id="admin_event">
-	<p class="admin_tytul">Edycja galerii</p>
+	<p class="admin_tytul">Dodawanie nowej galerii</p>
 	
 	<?php echo $this->form ?>
 
