--- a/application/modules/admin/layouts/scripts/layout_admin.phtml
+++ b/application/modules/admin/layouts/scripts/layout_admin.phtml
@@ -29,6 +29,23 @@
 </head>
 
 <body onload=chImg();>
+    <div id="priority_messages">
+	<ul>
+	<?php foreach ($this->priorityMessenger() as $label => $messages) : ?>
+		<?php if (count($messages)) : ?> 
+			<li class="<?php echo $label ?>_message">
+				<ul class="<?php echo $label ?>_message">
+				<?php foreach ($messages as $message) : ?>
+					<li><?php echo $message ?></li>
+				<?php endforeach; ?>
+				</ul>
+			</li>
+		<?php endif; ?>
+	<?php endforeach; ?>
+	</ul>
+</div>
+    
+    
 	<div id="container">
 		<div id="left">
 			<div id="image8"></div>
@@ -42,6 +59,9 @@
 					</li>
 					<li>
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'index', 'lang'=>'pl', 'where'=>'announcement'), null, true); ?>">Strona ZAPOWIEDZI</a>
+					</li>
+                                        <li>
+						<a href="<?php echo $this->url(array('controller'=>'gallery', 'action'=>'index')); ?>">Strona FOTO</a>
 					</li>
 					<li>
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'index', 'lang'=>'pl', 'where'=>'archive'), null, true); ?>">Strona ARCHIWUM</a>
