--- a/application/modules/admin/views/scripts/event/add.phtml
+++ b/application/modules/admin/views/scripts/event/add.phtml
@@ -1,7 +1,7 @@
-   <!-- application/views/scripts/guestbook/sign.phtml -->
+<div id="admin_event">
+	<p class="admin_tytul">Dodawanie nowego eventu</p>
+	
+	<?php echo $this->form ?>
 
-      Please use the form below to sign our guestbook!
-
-      <?php
-      $this->form->setAction($this->url());
-      echo $this->form;
+</div>
+      
