--- a/application/modules/admin/views/scripts/event/index.phtml
+++ b/application/modules/admin/views/scripts/event/index.phtml
@@ -23,14 +23,15 @@ elseif ($_SESSION['event_kind']=='announcement'){
 		<td>Usuń</td>
 	</tr>
 	
+	<?php $lp = 1 ?>
 	<?php foreach ($this->entries as $entry): ?>
     <tr onMouseOver="this.style.background='#FFFFCC'" onMouseOut="this.style.background='none'">
-    <td><?php echo $this->escape($entry->getId())?></td>
+    <td><?php echo $lp++?></td>
     <td id="tytul"><?php echo $this->escape($entry->getTitle())?></td>
     <td><?php echo date('d.m.Y', strtotime($this->escape($entry->getDateFrom())) )?></td>
 	<td id="pre_content"><?php echo substr(nl2br($this->escape($entry->getPreContentPl())),0, 75) ?> ...</td>
-	<td><a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'details', 'id'=>$entry->getId(), 'lang'=>'pl'), null, true);?>"><img src="/images/edit.jpg" /></a></td>
-	<td><a href="#"><img src="/images/drop.jpg" /></a></td>
+	<td><a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'edit', 'id'=>$entry->getId(), 'lang'=>'pl', 'where'=>$_SESSION['event_kind']), null, true);?>"><img src="/images/edit.jpg" /></a></td>
+	<td><a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'remove', 'id'=>$entry->getId(), 'lang'=>'pl', 'where'=>$_SESSION['event_kind']), null, true);?>"><img src="/images/drop.jpg" /></a></td>
     
     </tr>
     <?php endforeach ?>
