--- a/application/views/scripts/announcement/details.phtml
+++ b/application/views/scripts/announcement/details.phtml
@@ -12,7 +12,7 @@
 	
 	<div id="details_cont">
 		<div id="details_title">
-			<?php echo date('d.m.Y', strtotime($this->escape($entry->getDateFrom())) )?>
+			<?php echo $this->escape($entry->getDate()) ?>
 			<?php echo nl2br($this->escape($entry->getTitleLng())) ?>
 		</div>
     
