--- a/application/views/scripts/announcement/index.phtml
+++ b/application/views/scripts/announcement/index.phtml
@@ -12,7 +12,7 @@
 	<dt class="announcement">
     <div id="main_content_announcement_cont">
     <p class="announcement_title">
-    	<?php echo date('d.m.Y', strtotime($this->escape($entry->getDateFrom())) )?>
+		<?php echo $this->escape($entry->getDate()) ?>
     	<?php echo $this->escape($entry->getTitleLng()) ?>
     </p>
     
