zmiany w panelu administracyjnym

--- a/application/modules/admin/layouts/scripts/layout_admin.phtml
+++ b/application/modules/admin/layouts/scripts/layout_admin.phtml
@@ -52,34 +52,25 @@
 			<div id="menu_left_admin">
 				<ul>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'index', 'lang'=>'pl')); ?>">Strona HOME</a>
-					</li>
-					<li>
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'index', 'lang'=>'pl', 'where'=>'news'), null, true); ?>">Strona NEWS</a>
 					</li>
 					<li>
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'index', 'lang'=>'pl', 'where'=>'announcement'), null, true); ?>">Strona ZAPOWIEDZI</a>
 					</li>
+					<li>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'index', 'lang'=>'pl', 'where'=>'archive'), null, true); ?>">Strona ARCHIWUM</a>
+					</li>
                     <li>
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'gallery', 'action'=>'index', 'lang'=>'pl')); ?>">Strona FOTO</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'index', 'lang'=>'pl', 'where'=>'archive'), null, true); ?>">Strona ARCHIWUM</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona PARTNERZY</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona KARTA</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'information2', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Pozostałe PODSTRONY</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona KONTAKT</a>
-					</li>
-					<li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona OFERTA</a>
-					</li>
-					<li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona PARTNERZY</a>
-					</li>
-					<li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'newsletter', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona NEWSLETTER</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Współdzielone zdjęcia</a>
 					</li>
 				</ul>
 			</div>
