--- a/public/css/global.css
+++ b/public/css/global.css
@@ -653,19 +653,28 @@ padding-left: 20px;
 padding-right: 20px;
 }
 
-input, textarea {
+input{
 border-top-left-radius:3px;
 border-top-right-radius:3px;
 border-bottom-left-radius:3px;
 border-bottom-right-radius:3px;
-border: 1px solid;
+border: 1px outset;
 }
+
+input#title, input#title_en, input#pre_content_pl, input#pre_content_en{
+width: 660px;
+}
+
+input#title, input#title_en, input#pre_content_pl, input#pre_content_en, input#date_from, input#date_to{
+height: 20px;
+}
+
 textarea{
 border-top-left-radius:3px;
 border-top-right-radius:3px;
 border-bottom-left-radius:3px;
 border-bottom-right-radius:3px;
-border: 1px solid;
+border: 1px outset;
 }
 
 table#event{
