panel administracyjny  Please enter the commit message for your changes. Lines starting

--- a/application/modules/admin/layouts/scripts/layout_admin.phtml
+++ b/application/modules/admin/layouts/scripts/layout_admin.phtml
@@ -67,7 +67,7 @@
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona PARTNERZY</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'information2', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Pozostałe PODSTRONY</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'information', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Pozostałe PODSTRONY</a>
 					</li>
 					<li>
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Współdzielone zdjęcia</a>
