--- a/application/views/scripts/announcement/index.phtml
+++ b/application/views/scripts/announcement/index.phtml
@@ -5,8 +5,16 @@
     
     <div id="main_content_announcement_picture">
     <?php 
+    if ($entry->getPictureName() == null)
+    {
+    	echo "<img  class=\"announcement\" src=\"/images/www_leyout_buffet_buffet_text.gif\">";
+    }
+    else
+    {
     $sciezka = $this->escape($entry->getPictureName());
-    echo "<img  class=\"announcement\" src=\"$sciezka\">" ?>
+    echo "<img  class=\"announcement\" src=\"$sciezka\">";
+    } ?>
+ 
     </div>
     
 	<dt class="announcement">
