--- a/application/views/scripts/newsletter/index.phtml
+++ b/application/views/scripts/newsletter/index.phtml
@@ -1,2 +1,11 @@
-Podstrona NEWSLETTER
+<?php echo $this->partial('shared/main_images.phtml', array('pictures' => $this->entries2)); ?>
+
+<div id="main_content">
+
+<p class="main_text">
+    <?php foreach ($this->entries as $entry): ?>
+    <?php echo nl2br($this->escape($entry->getContentLng())) ?>
+    <?php endforeach ?>
+</p>
+</div>
 
