--- a/application/modules/admin/views/scripts/information/index.phtml
+++ b/application/modules/admin/views/scripts/information/index.phtml
@@ -3,7 +3,7 @@
 <p class='admin_tytul'>Edycja pozostałych PODSTRON</p>
 
 
-<table id="event">
+<table id="information">
 	<tr id="naglowek">
 		<td>Lp.</td>
 		<td>Podstrona</td>
@@ -16,8 +16,8 @@
     <tr onMouseOver="this.style.background='#FFFFCC'" onMouseOut="this.style.background='none'">
     <td><?php echo $lp++?></td>
     <td id="typ"><?php echo $this->escape($entry->getType())?></td>
-	<td id="content"><?php echo substr(nl2br($this->escape($entry->getContent())),0, 100) ?> ...</td>
-	<td><a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'edit', 'id'=>$entry->getId(), 'lang'=>'pl', 'where'=>$_SESSION['event_kind']), null, true);?>"><img src="/images/edit.jpg" /></a></td>    
+	<td id="content"><?php echo substr(nl2br($this->escape($entry->getContent())),0, 150) ?> ...</td>
+	<td><a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'information', 'action'=>'edit', 'id'=>$entry->getId(), 'lang'=>'pl'), null, true);?>"><img src="/images/edit.jpg" /></a></td>    
     </tr>
     <?php endforeach ?>
 
