--- a/application/views/scripts/archive/details.phtml
+++ b/application/views/scripts/archive/details.phtml
@@ -5,8 +5,15 @@
 
 	<div id="details_picture">
 		<?php 
+		if ($entry->getPictureName() == null)
+    		{
+    			echo "<img  class=\"details\" src=\"/images/www_leyout_buffet_buffet_text.gif\">";
+    		}
+    	else
+    	{
     	$sciezka = $this->escape($entry->getPictureName());
-    	echo "<img  class=\"details\" src=\"$sciezka\">" 
+    	echo "<img  class=\"details\" src=\"$sciezka\">";
+    	} 
     	?>
 	</div>
 	
