--- a/application/views/scripts/archive/index.phtml
+++ b/application/views/scripts/archive/index.phtml
@@ -7,8 +7,16 @@
     
     <div id="main_content_archive_picture">
     <?php 
+    if ($entry->getPictureName() == null)
+    {
+    	echo "<img  class=\"archive\" src=\"/images/www_leyout_buffet_buffet_text.gif\">";
+    }
+    else
+    {
     $sciezka = $this->escape($entry->getPictureName());
-    echo "<img  class=\"archive\" src=\"$sciezka\">" ?>
+    echo "<img  class=\"archive\" src=\"$sciezka\">";
+    }
+     ?>
     </div>
     
 	
