--- a/public/css/global.css
+++ b/public/css/global.css
@@ -179,6 +179,7 @@ padding-left	: 30px;
 padding-top		: 25px;
 padding-right	: 30px;
 padding-bottom	: 50px;
+background-color: red;
 }
 
 #card_button{
