--- a/application/modules/admin/layouts/scripts/layout_admin.phtml
+++ b/application/modules/admin/layouts/scripts/layout_admin.phtml
@@ -3,9 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Buffet</title>
-	<?php echo $this->headLink()->appendStylesheet('/css/global.css') ?>
+	<?php echo $this->headLink()
+		->appendStylesheet('/css/redmond/jquery-ui-1.8.19.custom.css')
+		->appendStylesheet('/css/global.css') ?>
 	<?php echo $this->headScript()
-		->prependFile('/js/main.js')
+		->prependFile('/js/admin.js')
+		->prependFile('/js/jquery-ui-1.8.18.min.js')
 		->prependFile('/js/jquery-1.7.2.min.js') ?>
 	
 	<script type="text/javascript">
