--- a/application/modules/admin/views/scripts/gallery/index.phtml
+++ b/application/modules/admin/views/scripts/gallery/index.phtml
@@ -1,6 +1,8 @@
 <div id="admin_event">
 	<p class="admin_tytul">Edycja podstrony FOTO</p>
-	<a href="<?php echo $this->url(array('action' => 'add')) ?>">Dodaj nową galerię</a>
+	
+	<a href="<?php echo $this->url(array('action' => 'add')) ?>" class="button">Dodaj nową galerię</a>
+	
 	<table id="event">
 		<tr id="naglowek">
 			<td>Lp.</td>
