--- a/application/views/scripts/gallery/index.phtml
+++ b/application/views/scripts/gallery/index.phtml
@@ -8,7 +8,7 @@
 						<img src="<?php echo $this->escape($gallery->getMainPhoto()->getName()) ?>" />
 					</div>
 					<div class="thumbnails clearfix">
-						<?php foreach ($gallery->getPhotos() as $photo) : ?>
+						<?php foreach ($gallery->getActivePhotos() as $photo) : ?>
 							<div class="thumbnail"><img src="<?php echo $photo->getName() ?>" /></div>
 						<?php endforeach ?>
 					</div>
