--- a/application/modules/admin/layouts/scripts/layout_admin.phtml
+++ b/application/modules/admin/layouts/scripts/layout_admin.phtml
@@ -67,13 +67,13 @@
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'gallery', 'action'=>'index', 'lang'=>'pl')); ?>">Strona FOTO</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona PARTNERZY</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'partner', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona PARTNERZY</a>
 					</li>
 					<li>
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'information', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Pozostałe PODSTRONY</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Współdzielone zdjęcia</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'picture', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Współdzielone zdjęcia</a>
 					</li>
 				</ul>
 			</div>
