--- a/application/views/scripts/newsletter/index.phtml
+++ b/application/views/scripts/newsletter/index.phtml
@@ -1,4 +1,5 @@
 <?php echo $this->partial('shared/main_images.phtml', array('pictures' => $this->entries2)); ?>
 
-
+<div id="main_content">
 <?php echo $this->form ?>
+</div>
