--- a/application/views/scripts/news/details.phtml
+++ b/application/views/scripts/news/details.phtml
@@ -24,7 +24,7 @@
 		</div>
     
     	<div id="details_content">
-    		<?php echo nl2br($this->escape($entry->getContent())) ?>
+    		<?php echo nl2br($entry->getContent()) ?>
     	</div>
     	
     	<div id="details_main_back">
