panel administracyjny Please enter the commit message for your changes. Lines starting

--- a/application/modules/admin/layouts/scripts/layout_admin.phtml
+++ b/application/modules/admin/layouts/scripts/layout_admin.phtml
@@ -72,7 +72,7 @@
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'information', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Pozostałe PODSTRONY</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'picture', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Współdzielone zdjęcia</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'picture', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Zdjęcia BANNER</a>
 					</li>
 				</ul>
 			</div>
