--- a/application/modules/admin/views/scripts/gallery/index.phtml
+++ b/application/modules/admin/views/scripts/gallery/index.phtml
@@ -6,11 +6,11 @@
 	<table id="event">
 		<tr id="naglowek">
 			<td>Lp.</td>
-			<td>Tytul</td>
+			<td>Tytuł</td>
 			<td>Data od</td>
-			<td>Skrocona tresc</td>
+			<td>Zajawka</td>
 			<td>Edytuj</td>
-			<td>Usun</td>
+			<td>Usuń</td>
 		</tr>
 
 		<?php foreach ($this->entries as $lp => $entry): ?>
