--- a/application/modules/admin/views/scripts/partner/index.phtml
+++ b/application/modules/admin/views/scripts/partner/index.phtml
@@ -1,22 +1,20 @@
 <div id="admin_event">
 	<p class="admin_tytul">Edycja podstrony PARTNERZY</p>
 	
-	<a href="<?php echo $this->url(
-			array('module' => 'admin', 'controller' => 'partner', 'action' => 'add-photo',), 
-			null, true) ?>" class="button">
-		Dodaj nowego partnera
-	</a> 
+	<?php echo $this->form ?> 
 	 
 	<div class="gallery-photos clearfix">	
 		<?php foreach ($this->entries as $entry): ?>
 		<div class="gallery-photo">
 		<?php $sciezka = $this->escape($entry->getName());
-    	echo "<img src=\"$sciezka\" height=\"40\" />" ?>
+    	echo "<img src=\"$sciezka\" height=\"45\" />" ?>
+    	<a href="<?php echo $this->url(
+				array('module' => 'admin', 'controller' => 'partner', 'action' => 'remove-photo',
+					'id' => $entry->getId()), null, true) ?>" class="button" >
+				<img src="/images/drop.jpg" "/>
+		</a>
     	</div>
 		<?php endforeach; ?>
-		
-		
 
-		
 	</div>
 </div>
